# fastapi-crudrouter-mongodb

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: 🐛-bug---issue-report.md
.github/workflows/: ci.yml
docs/: mkdocs.yml
docs/docs/features/: CRUDLookup.md
docs/en/: mkdocs.yml
docs/en/docs/: index.md
docs/en/docs/css/: custom.css
docs/en/docs/examples/: minimalist.md
docs/en/docs/features/: CRUDEmbed.md  CRUDRouter.md  MongoModel.md  MongoObjectId.md
docs/en/docs/js/: custom.js
fastapi_crudrouter_mongodb/: __init__.py
fastapi_crudrouter_mongodb/core/: __init__.py
fastapi_crudrouter_mongodb/core/factories/: CRUDEmbedRouterRepository.py  CRUDLookupRouterFactory.py  CRUDRouterFactory.py  __init__.py
fastapi_crudrouter_mongodb/core/models/: CRUDEmbed.py  CRUDLookup.py  CRUDPopulate.py  __init__.py  camel_model.py  deleted_mongo_model.py  mongo_model.py  mongo_object_id_model.py
fastapi_crudrouter_mongodb/core/repositories/: CRUDRepository.py  __init__.py
fastapi_crudrouter_mongodb/core/router/: CRUDRouter.py  CRUDRouterFactory.py  CRUDRouterRepository.py  CRUDRouterService.py  __init__.py
fastapi_crudrouter_mongodb/core/router/embed/: CRUDEmbedRouter.py  CRUDEmbedRouterFactory.py  __init__.py  (+1 more)
fastapi_crudrouter_mongodb/core/routers/: CRUDRouter.py  __init__.py
fastapi_crudrouter_mongodb/core/services/: CRUDService.py  __init__.py
fastapi_crudrouter_mongodb/core/utils/: __init__.py  deprecated_util.py  sorting.py
tests/: conftest.py
tests/integration/: test_embed_router.py  test_lookup_router.py  test_populate_router.py  test_router.py
tests/unit/: test_repository.py  test_service.py
(+8 files in other folders)
